# BveKobeCitySubway

./: .gitignore  U-Line.txt  Yumekamome.txt
U-Line/Map/: S17_S14.map.txt  _DEFINE.map.txt  _S12_1.map.txt  _S17_2.map.txt  ats.txt  map.txt  signal.csv
U-Line/Sound/: sound-list.txt
U-Line/Station/: LOCAL_S17_S01.csv  RAPID_S17-S01.csv
U-Line/Structure/: ._S12_platform.blend  ._S12_platform.blend1  ._S12_platform.x  ._S13.x  ._S14_home.blend  ._S14_home.blend1  ._S14_home.x  ._S14_home1.blend  ._S14_home1.blend1  ._S14_home1.x  ._S14_home2.x  ._S14_home_a.x  ._S14_home_b.x  ._S14_home_wall.x  ._S14_home_wall1.blend  ._S14_home_wall1.blend1  ._S14_home_wall2.x  ._S14_home_wall3.blend  ._S14_home_wall3.blend1  ._S14_home_wall3.x  ._ballast.blend  ._ballast.blend1  ._ballast.x  ._ballast_dassenboushi.blend  ._ballast_dassenboushi.blend1  ._ballast_dassenboushi.x  ._chijoshi.blend  ._chijoshi.blend1  ._chijoshi.x  ._floor.blend  ._floor.blend1  ._floor.x  ._gakuen_ishigaki.blend  ._gakuen_ishigaki.blend1  ._gakuen_ishigaki.x  ._gakuen_ishigaki_1.blend  ._gakuen_ishigaki_1.blend1  ._gakuen_ishigaki_1.x  ._gakuen_ishigaki_2.x  ._heisoku.blend  (+251 more)
U-Line/Vehicle/: 6000.parameter.txt  6000.vehicle.txt
Yumekamome/Map/: Main_K10_K01.map.txt  curve_gradient.map.txt  main.map.tsv  station.map.txt  variable.map.txt
Yumekamome/Sound/: Sound.txt
Yumekamome/Vehicle/5000/Ats/: Cargo.toml  build.sh
Yumekamome/Vehicle/5000/Ats/.cargo/: config
Yumekamome/Vehicle/5000/Ats/docs/: io.md
Yumekamome/Vehicle/5000/Ats/src/: ati.rs  ats.rs  lib.rs  voice.rs
(+262 files in other folders)
